--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -22,7 +22,9 @@ repositories {
 }
 
 dependencies {
+    implementation project(':domain')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
@@ -30,7 +32,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
-
 tasks.named('test') {
     useJUnitPlatform()
 }
