--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'e-commerce-system'
 
 include 'order-service'
 include 'payment-service'
+include 'inventory-service'
 include 'domain'
