feat: create inventory model, add ddl and dml for inventory table

--- a/inventory-service/src/main/resources/application.yaml
+++ b/inventory-service/src/main/resources/application.yaml
@@ -1,1 +1,21 @@
+server:
+  port: 8081
 
+spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+  datasource:
+    username: postgres
+    password: postgres
+    url: jdbc:postgresql://localhost:5432/inventory_db
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
