--- a/payment-service/src/main/resources/application.yaml
+++ b/payment-service/src/main/resources/application.yaml
@@ -3,7 +3,9 @@ server:
 
 spring:
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: order-group
     producer:
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
