--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -23,16 +23,21 @@ repositories {
 
 ext {
 	set("mapstructVersion", "1.5.5.Final")
+	set("jwtVersion", "0.11.5")
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation "org.mapstruct:mapstruct-processor:${mapstructVersion}"
 	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 	implementation project(':domain')
+	implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
+	runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
