--- a/order-service/build.gradle
+++ b/order-service/build.gradle
@@ -24,6 +24,7 @@ repositories {
 ext {
 	set("mapstructVersion", "1.5.5.Final")
 	set("jwtVersion", "0.11.5")
+	set("awaitilityVersion", "4.2.0")
 }
 
 dependencies {
@@ -48,6 +49,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:kafka'
 	testImplementation 'org.testcontainers:postgresql'
+	testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
 }
 
 tasks.named('test') {
