chore: modify ci file to output logs from gradle

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,4 +20,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Run build(it includes task `test`) with Gradle Wrapper
-        run: ./gradlew build
+        run: ./gradlew build --console=plain
