--- a/inventory-service/build.gradle
+++ b/inventory-service/build.gradle
@@ -21,6 +21,10 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set("awaitilityVersion", "4.2.0")
+}
+
 dependencies {
     implementation project(':domain')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -31,6 +35,13 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:kafka'
+    testImplementation 'org.testcontainers:postgresql'
+    testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
