--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -21,6 +21,10 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set("awaitilityVersion", "4.2.0")
+}
+
 dependencies {
     implementation project(':domain')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -29,6 +33,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.testcontainers:kafka'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
