--- a/payment-service/build.gradle
+++ b/payment-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.testcontainers:kafka'
+    testImplementation 'org.testcontainers:postgresql'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
