--- a/inventory-service/src/main/resources/application-prod.yaml
+++ b/inventory-service/src/main/resources/application-prod.yaml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: kafka-service:9092
   datasource:
     url: jdbc:postgresql://inventory-db:5432/inventory
   jpa:
