--- a/order-service/src/main/resources/application-prod.yaml
+++ b/order-service/src/main/resources/application-prod.yaml
@@ -1,5 +1,5 @@
 spring:
   kafka:
-    bootstrap-servers: kafka:9092
+    bootstrap-servers: kafka-service:9092
   datasource:
     url: jdbc:postgresql://order-db:5432/order
